--- a/compass.html
+++ b/compass.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COMPASS</title>
     <style>
+    @import url("https://use.typekit.net/sdh6jxb.css");
         body {
             font-family: "Proxima Nova";
             margin: 0;
