condensed FAQ section

--- a/compass.html
+++ b/compass.html
@@ -174,29 +174,26 @@
 
     <section id="faq" class="container">
         <h2>Frequently Asked Questions</h2>
-        <h3>Would it be possible to join only 1 or 2 days of the workshop?</h3>
-        <p>The workshops are interrelated, so if you miss one you might not be able to follow. We will record the sessions and send you the links, so you can watch them and catch up with the rest of the group.</p>
+        <h3>Is it okay if I have next to no coding/programming knowledge?</h3>
+        <p>It is perfectly fine if you have no prior coding/programming experience.</p>
 
         <h3>Do we have to pay anything to attend this workshop?</h3>
         <p>No, the workshop is free.</p>
 
-        <h3>I want to know the specific plan of the workshop.</h3>
-        <p>Please see above.</p>
+        <h3>Would it be possible to join only 1 or 2 days of the workshop?</h3>
+        <p>The workshops are interrelated, so if you miss one you might not be able to follow. We will record the sessions and send you the links, so you can watch them and catch up with the rest of the group.</p>
 
         <h3>Will I need to have a machine running Linux?</h3>
         <p>No, you will not. However, if you have a Linux machine that may make some things easier for you.</p>
 
-        <h3>Will I have to download any software beforehand? Is this a 2-day workshop or a 2-choose-1 day class?</h3>
-        <p>You should not need any software installed beforehand. The workshops are interrelated and it is best if you attend all of them.</p>
+        <h3>Will I have to download any software beforehand?</h3>
+        <p>You should not need any software installed beforehand.</p>
 
         <h3>Would it be possible to still receive the notes from the workshop even if we cannot attend the Zoom?</h3>
         <p>Yes, we will provide posts on the COMPASS website (soon to go live) with whatever notes we have.</p>
 
         <h3>Will this be a watch and learn experience, or will there be practice work given out to test what we've learned?</h3>
         <p>It will be both watch and learn and hands-on experience.</p>
-
-        <h3>Is it okay if I have next to no coding/programming knowledge?</h3>
-        <p>It is perfectly fine if you have no prior coding/programming experience.</p>
 
         <h3>Does the type of computer matter? Especially as someone planning on doing research in this field, is there a particular computer that is best?</h3>
         <p>No, it does not. What you will need is a computer that can connect to the World Wide Web and can have a web browser. Therefore, no particular computer is better than another.</p>
