--- a/compass.html
+++ b/compass.html
@@ -146,7 +146,7 @@
         <p><em>noon-1pm:</em> Lunch (provided)</p>
         <p><em>1pm-2pm:</em> Python Hands-on experience</p>
 
-        <h3>Tuesday</h3>
+	<h3>Tuesday [<a href="https://arizona.box.com/s/63xgfwsuoyznz0rh7c1i26zb8y1etkbh">recording</a>]</h3>
         <p><em>10am-11am:</em> Intro to Linux (pdf notes will be provided)</p>
         <p><em>10:30am-noon:</em> Bash scripting</p>
         <p><em>noon-1pm:</em> Lunch (provided)</p>
