--- a/compass.html
+++ b/compass.html
@@ -140,33 +140,33 @@
 
     <section id="schedule" class="container">
         <h2>Schedule</h2>
-	<h3>Monday [<a href="https://arizona.box.com/s/d7zgjzjh76fwftvv7j370hrovdskiv2n">recording</a>]</h3>
+	    <h3>Monday [<a href="https://arizona.box.com/s/d7zgjzjh76fwftvv7j370hrovdskiv2n">recording</a>]</h3>
         <p><em>10am-10:30am:</em> Introductions & Pre-workshop survey</p>
-        <p><em>10:30am-noon:</em> Intro to Python & Hands-on Experience</p>
+        <p><em>10:30am-noon:</em> Intro to Python with Hands-on Experience</p>
         <p><em>noon-1pm:</em> Lunch (provided)</p>
         <p><em>1pm-2pm:</em> Python Hands-on experience</p>
 
-	<h3>Tuesday [<a href="https://arizona.box.com/s/63xgfwsuoyznz0rh7c1i26zb8y1etkbh">recording</a>]</h3>
+	    <h3>Tuesday [<a href="https://arizona.box.com/s/63xgfwsuoyznz0rh7c1i26zb8y1etkbh">recording</a>]</h3>
+        <p><em>10am-11am:</em> Python Loops &Functions</p>
+        <p><em>11am-noon:</em> Data Visualization with Matplotlib & Numpy</p>
+        <p><em>noon-1pm:</em> Lunch (provided)</p>
+        <p><em>1pm-2pm:</em> Data Visualization Continued</p>
+
+        <h3>Wednesday</h3>
         <p><em>10am-11am:</em> Intro to Linux (pdf notes will be provided)</p>
         <p><em>10:30am-noon:</em> Bash scripting</p>
         <p><em>noon-1pm:</em> Lunch (provided)</p>
         <p><em>1pm-2pm:</em> Hands-on with bash within HPC</p>
-
-        <h3>Wednesday</h3>
-        <p><em>10am-11am:</em> Matplotlib/Numpy & Other Packages</p>
-        <p><em>11am-noon:</em> Matplotlib/Numpy/Hands-on experience</p>
-        <p><em>noon-1pm:</em> Lunch (provided)</p>
-        <p><em>1pm-2pm:</em> Overleaf/Latex hands-on experience</p>
 
         <h3>Thursday</h3>
         <p><em>10am-11am:</em> Debugging</p>
         <p><em>11am-11:45am:</em> Github Basics</p>
         <p><em>11:45am-noon:</em> post-workshop survey</p>
         <p><em>noon-1pm:</em> Lunch (provided)</p>
-        <p><em>1pm-2pm:</em> Github Advanced (Working with other packages)</p>
+        <p><em>1pm-2pm:</em> Introduction to Latex with Overleaf</p>
 
         <h3>Friday (Optional)</h3>
-        <p>Some more advanced topics: Editors, makefiles</p>
+        <p>Some more advanced topics: Github Advanced (Working with other packages), Editors, makefiles</p>
         <p>Answering any questions</p>
         <p>No Lunch</p>
     </section>
