--- a/compass.html
+++ b/compass.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="font" href="https://use.typekit.net/sdh6jxb.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COMPASS</title>
     <style>
-    @import url("https://use.typekit.net/sdh6jxb.css");
         body {
             font-family: "Proxima Nova";
             margin: 0;
