--- a/compass.html
+++ b/compass.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="font" href="https://use.typekit.net/sdh6jxb.css">
+    <link rel="stylesheet" href="https://use.typekit.net/sdh6jxb.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COMPASS</title>
