--- a/compass.html
+++ b/compass.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="https://use.typekit.net/sdh6jxb.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COMPASS</title>
+    <link rel="stylesheet" href="https://use.typekit.net/sdh6jxb.css">
     <style>
         body {
             font-family: "Proxima Nova";
@@ -49,6 +49,7 @@
             font-size: 18px;
         }
         p {
+            font-family: "Proxima Nova";
             font-size: 16px;
             margin-bottom: 0px;
             line-height: 1.5;
@@ -67,6 +68,7 @@
             font-weight: bold;
         }
         h2 {
+            font-family: "Proxima Nova";
             font-size: 30px;
             margin-bottom: 10px;
         }
