successfully implemented UA fonts through Adobe web fonts

--- a/compass.html
+++ b/compass.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COMPASS</title>
-    <link rel="stylesheet" href="https://use.typekit.net/sdh6jxb.css">
+    <link rel="stylesheet" href="https://use.typekit.net/kjf1eoy.css">
     <style>
+        * {
+            font-family: "Proxima-Nova", serif;
+            font-weight: 400;
+        }
         body {
-            font-family: "Proxima Nova";
             margin: 0;
             padding: 0;
             background-color: #F4EDE5;
@@ -19,7 +22,6 @@
             overflow: hidden;
         }
         header {
-            font-family: "Proxima Nova Extra Condensed";
             font-size: xx-large;
             background: #AB0520;
             color: #F4EDE5;
@@ -49,7 +51,6 @@
             font-size: 18px;
         }
         p {
-            font-family: "Proxima Nova";
             font-size: 16px;
             margin-bottom: 0px;
             line-height: 1.5;
@@ -64,12 +65,19 @@
         }
         nav {
             text-align: center;
-            font-family: "Proxima Nova";
             font-weight: bold;
         }
+        h1 {
+            font-family: "Proxima-Nova", sans-serif;
+            font-weight: 900;
+            font-style: normal;
+            font-size: 65px;
+            letter-spacing: 4px;
+            margin-bottom: 0px;
+        }
         h2 {
-            font-family: "Proxima Nova";
             font-size: 30px;
+            font-weight: 700;
             margin-bottom: 10px;
         }
         section {
@@ -94,11 +102,13 @@
             color: #ffffff;
         }
     </style>
+
 </head>
+
 <body>
     <header>
         <div class="container">
-            <h1 style="margin-bottom: 0px; letter-spacing: 4px;">
+            <h1 style="margin-bottom: 0px;">
                 COMPASS
             </h1>
             <nav>
