adjusted backup font to sans-serif

--- a/compass.html
+++ b/compass.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/kjf1eoy.css">
     <style>
         * {
-            font-family: "Proxima-Nova", serif;
+            font-family: "Proxima-Nova", sans-serif;
             font-weight: 400;
         }
         body {
