--- a/compass.html
+++ b/compass.html
@@ -69,13 +69,14 @@
         }
         h1 {
             font-family: "Proxima-Nova", sans-serif;
-            font-weight: 900;
+            font-weight: 800;
             font-style: normal;
             font-size: 65px;
             letter-spacing: 4px;
             margin-bottom: 0px;
         }
         h2 {
+            font-family: "Proxima-Nova", sans-serif;
             font-size: 30px;
             font-weight: 700;
             margin-bottom: 10px;
@@ -122,7 +123,7 @@
     </header>
 
     <section class="banner">
-        <img src="images/cosmic_cliffs.png" alt="Banner Image" style="height: 200px; width: 100%; object-fit: cover; object-position: center;">
+        <img src="images/cosmic_cliffs.png" alt="Banner Image" style="height: 300px; width: 100%; object-fit: cover; object-position: center;">
     </section>
 
     <section id="about" class="container">
