final heading font-weight

--- a/compass.html
+++ b/compass.html
@@ -68,15 +68,15 @@
             font-weight: bold;
         }
         h1 {
-            font-family: "Proxima-Nova", sans-serif;
+            font-family: "proxima-nova", sans-serif;
             font-weight: 800;
             font-style: normal;
-            font-size: 65px;
+            font-size: 70px;
             letter-spacing: 4px;
             margin-bottom: 0px;
         }
         h2 {
-            font-family: "Proxima-Nova", sans-serif;
+            font-family: "proxima-nova", sans-serif;
             font-size: 30px;
             font-weight: 700;
             margin-bottom: 10px;
