--- a/compass.html
+++ b/compass.html
@@ -81,6 +81,12 @@
             font-weight: 700;
             margin-bottom: 10px;
         }
+        h3{
+            font-family: "proxima-nova", sans-serif;
+            font-size: 20px;
+            font-weight: 600;
+            margin-bottom: 10px;
+        }
         section {
             padding: 20px;
             margin: 20px 0;
@@ -169,17 +175,17 @@
         <p><em>10am-11am:</em> Intro to Linux (pdf notes will be provided)</p>
         <p><em>10:30am-noon:</em> Bash scripting</p>
         <p><em>noon-1pm:</em> Lunch (provided)</p>
-        <p><em>1pm-2pm:</em> Hands-on with bash within HPC</p>
+        <p><em>1pm-2pm:</em> Bash scripting continued</p>
 
         <h3>Thursday</h3>
-        <p><em>10am-11am:</em> Debugging</p>
+        <p><em>10am-11am:</em> Hands-on with bash within HPC</p>
         <p><em>11am-11:45am:</em> Github Basics</p>
         <p><em>11:45am-noon:</em> post-workshop survey</p>
         <p><em>noon-1pm:</em> Lunch (provided)</p>
         <p><em>1pm-2pm:</em> Introduction to Latex with Overleaf</p>
 
         <h3>Friday (Optional)</h3>
-        <p>Some more advanced topics: Github Advanced (Working with other packages), Editors, makefiles</p>
+        <p>Some more advanced topics: Debugging, Github Advanced (Working with other packages), Editors, makefiles</p>
         <p>Answering any questions</p>
         <p>No Lunch</p>
     </section>
