added wednesday recording link

--- a/compass.html
+++ b/compass.html
@@ -171,11 +171,11 @@
         <p><em>noon-1pm:</em> Lunch (provided)</p>
         <p><em>1pm-2pm:</em> Data Visualization Continued</p>
 
-        <h3>Wednesday</h3>
+        <h3>Wednesday</h3> [<a href="https://arizona.box.com/s/35a2wawuo16zqfapwnob1fedtk5j3x24">recording</a>]</h3>
         <p><em>10am-11am:</em> Intro to Linux (pdf notes will be provided)</p>
         <p><em>10:30am-noon:</em> Bash scripting</p>
         <p><em>noon-1pm:</em> Lunch (provided)</p>
-        <p><em>1pm-2pm:</em> Bash scripting continued</p>
+        <p><em>1pm-2pm:</em> Bash scripting (continued)</p>
 
         <h3>Thursday</h3>
         <p><em>10am-11am:</em> Hands-on with bash within HPC</p>
