updated thursday schedule

--- a/compass.html
+++ b/compass.html
@@ -166,7 +166,7 @@
         <p><em>1pm-2pm:</em> Python Hands-on experience</p>
 
 	    <h3>Tuesday [<a href="https://arizona.box.com/s/63xgfwsuoyznz0rh7c1i26zb8y1etkbh">recording</a>]</h3>
-        <p><em>10am-11am:</em> Python Loops &Functions</p>
+        <p><em>10am-11am:</em> Python Loops & Functions</p>
         <p><em>11am-noon:</em> Data Visualization with Matplotlib & Numpy</p>
         <p><em>noon-1pm:</em> Lunch (provided)</p>
         <p><em>1pm-2pm:</em> Data Visualization Continued</p>
@@ -178,11 +178,11 @@
         <p><em>1pm-2pm:</em> Bash scripting (continued)</p>
 
         <h3>Thursday</h3>
-        <p><em>10am-11am:</em> Hands-on with bash within HPC</p>
-        <p><em>11am-11:45am:</em> Github Basics</p>
-        <p><em>11:45am-noon:</em> post-workshop survey</p>
+        <p><em>10am-11:15am:</em> Hands-on with bash within HPC</p>
+        <p><em>11:15am-noon:</em> Github Basics</p>
         <p><em>noon-1pm:</em> Lunch (provided)</p>
-        <p><em>1pm-2pm:</em> Introduction to Latex with Overleaf</p>
+        <p><em>1pm-1:45pm:</em> Introduction to Latex with Overleaf</p>
+        <p><em>1:45pm-2pm:</em> post-workshop survey</p>
 
         <h3>Friday (Optional)</h3>
         <p>Some more advanced topics: Debugging, Github Advanced (Working with other packages), Editors, makefiles</p>
