updated thursday recording and friday schedule

--- a/compass.html
+++ b/compass.html
@@ -173,21 +173,21 @@
 
         <h3>Wednesday [<a href="https://arizona.box.com/s/35a2wawuo16zqfapwnob1fedtk5j3x24">recording</a>]</h3>
         <p><em>10am-11am:</em> Intro to Linux (pdf notes will be provided)</p>
-        <p><em>10:30am-noon:</em> Bash scripting</p>
+        <p><em>10:30am-noon:</em> Bash scripting 1</p>
         <p><em>noon-1pm:</em> Lunch (provided)</p>
-        <p><em>1pm-2pm:</em> Bash scripting (continued)</p>
+        <p><em>1pm-2pm:</em> Bash scripting 2</p>
 
-        <h3>Thursday</h3>
-        <p><em>10am-11:15am:</em> Hands-on with bash within HPC</p>
-        <p><em>11:15am-noon:</em> Github Basics</p>
+        <h3>Thursday [<a href="https://arizona.box.com/s/dfrsaziv2kbcgeyc8kwx8q2bbkvdzmdl">recording</a>]</h3>
+        <p><em>10am-11:15am:</em> Bash Scripting 3</p>
+        <p><em>11:15am-noon:</em> Hands-on with HPC 1</p>
         <p><em>noon-1pm:</em> Lunch (provided)</p>
-        <p><em>1pm-1:45pm:</em> Introduction to Latex with Overleaf</p>
-        <p><em>1:45pm-2pm:</em> post-workshop survey</p>
+        <p><em>1pm-2pm:</em> Hands-on with HPC 2</p>
 
-        <h3>Friday (Optional)</h3>
-        <p>Some more advanced topics: Debugging, Github Advanced (Working with other packages), Editors, makefiles</p>
-        <p>Answering any questions</p>
-        <p>No Lunch</p>
+        <h3>Friday</h3>
+        <p><em>10am-11am:</em> Github Basics</p>
+        <p><em>11am-11:45am:</em> Latex and Overleaf</p>
+        <p><em>11:45am-noon:</em> post-workshop survey</p>
+        <p><em> End! </p>
     </section>
     </section>
 
