formatting bolding in the about section

--- a/compass.html
+++ b/compass.html
@@ -108,6 +108,9 @@
             background: #0C234B;
             color: #ffffff;
         }
+        strong {
+            font-weight: bold;
+        }
     </style>
 
 </head>
