removed italics at the end of schedule (which didn't stop)

--- a/compass.html
+++ b/compass.html
@@ -190,7 +190,7 @@
         <p><em>10am-11am:</em> Github Basics</p>
         <p><em>11am-11:45am:</em> Latex and Overleaf</p>
         <p><em>11:45am-noon:</em> post-workshop survey</p>
-        <p><em> End! </p>
+        <p> End! </p>
     </section>
     </section>
 
