--- a/index.html
+++ b/index.html
@@ -13,70 +13,7 @@
 
     <body>
 
-        <div class="navbar" id="navbar">
-
-        </div>
-
-        <div class="landing" id="landing">
-            
-            <div>
-                <h1 style="color:white">Vikram Manikantan</h1>
-                <h3 style="color:white">Astrophysics PhD student at <a href="https://astro.arizona.edu" style="font-style:italic; font-weight:700;">Steward Observatory</a></h3>
-            </div>
-
-            <div style="align-content: center;">
-                <img src="images/profile.png" style="width: 300px; border-radius: 25%;">
-            </div>
-
-        </div>
-
-        <div class="row one" id="about">
-            <div class="content">
-                <h2>About</h2>
-
-                <p> I am a PhD student in the Department of Astronomy at the University of Arizona. </p>
-            </div>
-
-        </div>
-
-        <!-- <div class="row" id="bhimage"
-            style="background-image: url('images/bh_image.png');
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center;
-            height: 80vh;">
-            eventually: 3D moving image?
-        </div> -->
-
-        <div class="row one" id="research">
-            <div class="content">
-                <h2>Research</h2>
-                <p> My research </p>
-            </div>
-        </div>
-
-        <div class="row two" id="outreach">
-            <h2>Outreach</h2>
-
-        </div>
-
-        <div class="row one" id="music">
-            <h2>Music</h2>
-
-        </div>
-
-        <div class="row two" id="contact">
-            <div>
-                <p style="padding-top: 10px;"> 
-                    institution: <a href="https://astro.arizona.edu/">Steward Observatory</a> <br>
-                    email: <a href="mailto:vik@arizona.edu" title="E-mail">vik@arizona.edu</a> <br>
-                    twitter: <a href="https://www.twitter.com/astro_vik" title="twitter"  target="_blank">@astro_vik</a><br>
-                    github: <a href="https://www.github.com/vikrammanikantan" title="github"  target="_blank">vikrammanikantan</a><br>
-                    orcID: <a href="https://orcid.org/0000-0003-0547-6158" title="orcid" target="_blank"> 0000-0003-0547-6158</a>
-                </p>
-            </div>
-
-        </div>
-
+        <!-- nav bar always on -->     
+        
 
     </body>
