--- a/index.html
+++ b/index.html
@@ -11,9 +11,49 @@
 
     </head>
 
-    <body>
+    <body id="top">
 
         <!-- nav bar always on -->
+
+        <div class="navbar" id="navbar">
+            <a class="title" href="#top" target="_self" style="text-decoration: none; color: black;"> 
+                Vikram Manikantan
+            </a>
+
+            <div class="links">
+                <a href="#research" target="_self"> Research </a>
+                <a href="#outreach" target="_self"> Outreach </a>
+                <a href="#music" target="_self"> Music </a>
+                <a href="#contact" target="_self"> Contact </a>
+                <a href="javascript:void(0);" style="font-size:20px;" class="icon" target="_self" onclick="myFunction()">&#9776;</a>
+            </div>
+            
+        </div>
+
+        <div class="grid-container">
+
+
+            <div class="landing">Main</div>  
+
+            <div class="section" id="research"> research </div>
+
+            <div class="section" id="outreach"> outreach </div>
+
+            <div class="section" id="music"> music </div>
+
+            <div class="section" id="contact"> contact </div>
+
+        </div>
         
+        <script>
+            function myFunction() {
+              var x = document.getElementById("navbar");
+              if (x.className === "navbar") {
+                x.className += " responsive";
+              } else {
+                x.className = "navbar";
+              }
+            }
+        </script>
 
     </body>
