added superscript northeast arrow and adjusted landing page formatting

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
                 <h1> Contact </h1>
                 
                 <body>
-                    <mark>Github</mark>: <a href="https://github.com/vikrammanikantan">vikrammanikantan</a>
+                    Email: <a href="mailto:vik@arizona.edu">vik@arizona.edu</a><sup> &nearr;</sup>
                     <br>
-                    <mark>Email</mark>: <a href="mailto:vik@arizona.edu">vik@arizona.edu</a>
+                    Twitter: <a href="https://www.twitter.com/astro_vik">@astro_vik</a><sup> &nearr;</sup>
                     <br>
-                    <mark>Twitter</mark>: <a href="https://www.twitter.com/astro_vik"  >@astro_vik</a>
+                    Github: <a href="https://github.com/vikrammanikantan">vikrammanikantan</a><sup> &nearr;</sup>
                     <br>
-                    <mark>Publications</mark>: <a href="https://scholar.google.com/citations?user=cscvnHUAAAAJ&hl=en"  >Google Scholar</a>; <a href="https://ui.adsabs.harvard.edu/search/q=author%3A%22Manikantan%2C%20Vikram%22"  >Astrophysics Data System (ADS)</a>
+                    Publications: <a href="https://scholar.google.com/citations?user=cscvnHUAAAAJ&hl=en">Google Scholar</a><sup> &nearr;</sup>; <a href="https://ui.adsabs.harvard.edu/search/q=author%3A%22Manikantan%2C%20Vikram%22">Astrophysics Data System (ADS)</a><sup> &nearr;</sup>
                 </body>
             </div>
         </div>
@@ -78,7 +78,7 @@
 
         <div class="footer">
             <body>
-                Copyright &copy; 2024, Vikram Manikantan
+                Copyright &copy; 2024, <a href="https://github.com/vikrammanikantan/vikrammanikantan.github.io/">Vikram Manikantan</a><sup style="font-size: 8px;"> &nearr;</sup>
             </body>
         </div>
 
