added text to about and research sections

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             </div>
 
             <div class="links" id="links">
+                <a href="#about" target="_self" onclick="close_nav()"> About </a>
                 <a href="#research" target="_self" onclick="close_nav()"> Research </a>
                 <a href="#outreach" target="_self" onclick="close_nav()"> Outreach </a>
                 <a href="#music" target="_self" onclick="close_nav()"> Music </a>
@@ -37,18 +38,48 @@
             <div class="landing">
                 
                 <div>
-                    <body>My name is <mark>Vikram Manikantan</mark>. I am an </body>
+                    <p>My name is <mark><a href="#contact" target="_self">Vikram Manikantan</a></mark>. I am an </p>
                     <h2>Astrophysics PhD Student</h2>
-                    <body> at <a href="https://astro.arizona.edu/">Steward Observatory</a>, at the University of Arizona. I study</body>
-                    <h2>binary black holes, accretion disks, relativistic jets, and their multi-messenger emission</h2>
+                    <p> at <a href="https://astro.arizona.edu/">Steward Observatory</a>, at the University of Arizona. I study</p>
+                    <h2>binary black holes, accretion disks, relativistic jets, and their multi-messenger emission.</h2>
 
                 </div>
 
             </div>  
 
+            <div class="section" id="about"> 
+                <h1> About </h1>
+                <div class="content">
+                    <p>
+                        Hi, my name is Vikram Manikantan and I am a 3rd year Astrophysics PhD student at <a href="https://astro.arizona.edu">Steward Observatory,</a><sup style="font-size: 8px;"> &nearr;</sup> at the University of Arizona. I currently work with Prof. Vasilis Paschalidis on simulating magnetohydrodynamic accretion onto binary black holes and uncovering their multi-messenger emission. I am part of the <a href="https://tap.arizona.edu/">Theoretical Astrophysics Program</a><sup style="font-size: 8px;">&nearr;</sup> (TAP) at the University of Arizona.
+                    </p>
+                    <p>
+                        Previously, I was at the <a href="https://ciera.northwestern.edu/"> Center for Interdisciplinary Exploration and Research in Astrophysics</a><sup style="font-size: 8px;">&nearr;</sup> (CIERA) at Northwestern University, where I worked with Prof. Sasha Tchekhovskoy on angular momentum transport mechanisms in magnetically arrested disks around spinning black holes [<a href="https://iopscience.iop.org/article/10.3847/1538-4357/ad323d">publication</a><sup>&nearr;</sup>]. 
+                    </p>
+                </div>
+                <div class="image">
+                    <img src="images/vikram.jpg" alt="Vikram Manikantan" style="width: 300px; display: block; ">
+                </div>
+            </div>
+
             <div class="section" id="research"> 
-                <div class="title">
-                    <h1> Research </h1>
+                <h1>Research </h1>
+                <div class="content">
+                    <p>
+                        I am a theoretical and computational astrophysicist whose research focuses on the multi-messenger nature of compact objects such as supermassive black hole binaries, neutron stars, supernovae, and other high-energy transients. I use numerical relativity and magnetohydrodynamic codes, such as Einstein Toolkit, IllinoisGRMHD, and H-AMR, to simulate these systems from first principles. 
+                    </p>
+                    <p>
+                        Currently, I am studying magnetohydrodynamic accretion onto supermassive binary black holes, with a specific interest in uncovering the electromagnetic counterparts to gravitational wave signals from these systems. 
+                    </p>
+                </div>
+                <div class="image">
+                    <img src="images/bh_image.png" alt="Binary Black Hole" style="width: 100%; display: block; ">
+                </div>
+                <div class="content">
+                    <h2>Publications</h2>
+                    <p> 
+                        "Winds and Disk Turbulence Exert Equal Torques on Magnetically Arrested Disks"<mark> Manikantan V.</mark>, <a href="https://ciera.northwestern.edu/directory/nicholas-omahen/">Kaaz N.</a>, <a href="https://ciera.northwestern.edu/directory/jonatan-jacquemin-ide/">Jacquemin-Ide J.</a>, <a href="https://www.uva.nl/en/profile/m/u/g.musoke/g.musoke.html?cb">Musoke G.</a>, <a href="https://koushikchatterjeeastro.wordpress.com/"> Chatterjee K.</a>, <a href="https://www.matthewliska.com/"> Liska M.</a>, <a href="https://ciera.northwestern.edu/directory/sasha-tchekhovskoy/">Tchekhovskoy A.</a>, 2024. ApJ, 965, 175, doi: <a href="http://doi.org/10.3847/1538-4357/ad323d">10.3847/1538-4357/ad323d</a>.
+                    </p>
                 </div>
             </div>
 
@@ -62,24 +93,25 @@
 
             <div class="section" id="contact">
                 <h1> Contact </h1>
-                
-                <body>
-                    Email: <a href="mailto:vik@arizona.edu">vik@arizona.edu</a><sup> &nearr;</sup>
-                    <br>
-                    Twitter: <a href="https://www.twitter.com/astro_vik">@astro_vik</a><sup> &nearr;</sup>
-                    <br>
-                    Github: <a href="https://github.com/vikrammanikantan">vikrammanikantan</a><sup> &nearr;</sup>
-                    <br>
-                    Publications: <a href="https://scholar.google.com/citations?user=cscvnHUAAAAJ&hl=en">Google Scholar</a><sup> &nearr;</sup>; <a href="https://ui.adsabs.harvard.edu/search/q=author%3A%22Manikantan%2C%20Vikram%22">Astrophysics Data System (ADS)</a><sup> &nearr;</sup>
-                </body>
+                <div class="content">
+                    <p>
+                        Email: <a href="mailto:vik@arizona.edu">vik@arizona.edu</a><sup> &nearr;</sup>
+                        <br>
+                        Twitter: <a href="https://www.twitter.com/astro_vik">@astro_vik</a><sup> &nearr;</sup>
+                        <br>
+                        Github: <a href="https://github.com/vikrammanikantan">vikrammanikantan</a><sup> &nearr;</sup>
+                        <br>
+                        Publications: <a href="https://scholar.google.com/citations?user=cscvnHUAAAAJ&hl=en">Google Scholar</a><sup> &nearr;</sup>; <a href="https://ui.adsabs.harvard.edu/search/q=author%3A%22Manikantan%2C%20Vikram%22">Astrophysics Data System (ADS)</a><sup> &nearr;</sup>
+                    </p>
+                </div>
             </div>
         </div>
 
 
         <div class="footer">
-            <body>
+            <p style="font-size: 16px;">
                 Copyright &copy; 2024, <a href="https://github.com/vikrammanikantan/vikrammanikantan.github.io/">Vikram Manikantan</a><sup style="font-size: 8px;"> &nearr;</sup>
-            </body>
+            </p>
         </div>
 
     </body>
