--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 
                 <div>
                     <p>My name is <mark><a href="#contact" target="_self">Vikram Manikantan</a></mark>. I am an </p>
-                    <h2>Astrophysics PhD Student</h2>
+                    <h2>Astrophysics PhD Candidate</h2>
                     <p> at <a href="https://astro.arizona.edu/">Steward Observatory</a>, at the University of Arizona. I study</p>
                     <h2>binary black holes, accretion disks, relativistic jets, and their multi-messenger emission.</h2>
 
