updated images and mosaic

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="section" id="about"> 
                 <h1> About </h1>
                 <div class="image" style="justify-content: left;">
-                    <img src="images/vikram.jpg" alt="Vikram Manikantan" style="width: 90%; max-width: 400px; display: block;">
+                    <img src="images/vikram2.jpg" alt="Vikram Manikantan" style="width: 90%; max-width: 400px; display: block; object-fit: cover;">
                 </div>
                 <div class="content">
                     <p>
@@ -168,9 +168,11 @@
                     <img class="large" src="images/music.jpg">
                     <img class="wide" src="images/BATTLES_5.jpg">
                     <img class="wide" src="images/block3.jpg">
-                    <img class="tall" src="images/block1.jpg">
+                    <img class="wide" src="images/grad.jpg">
+                    <img class="wide" src="images/park.jpg">
+                    <img class="" src="images/block1.jpg">
                     <img class="wide" src="images/lake.jpg">
-                    <img class="tall" src="images/kitt.jpg">
+                    <img class="" src="images/kitt.jpg">
                 </div>
                 
             </div>
