updated about section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="content">
                     <p>
-                        I am a computational/theoretical astrophysicist and 3rd year PhD student at <a href="https://astro.arizona.edu">Steward Observatory,</a> at the University of Arizona. I have a B.A. in Physics and a minor in Computer Science from Northwestern University. I am passionate about science education, soccer, music, and oxford commas. 
+                        I am a computational/theoretical astrophysicist and 3rd year PhD student at <a href="https://astro.arizona.edu">Steward Observatory,</a> at the University of Arizona. I have a B.A. in Physics and a minor in Computer Science from Northwestern University. I am passionate about science education, soccer, and music. 
                         
                     </p>
                     <p> 
