added bluesky socials

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <!-- and I built <a href="https://github.com/vikrammanikantan/vikrammanikantan.github.io/">this website from scratch</a> -->
 
                         <br>
-                        contact me: <a href="mailto:vik@arizona.edu">vik@arizona.edu</a>, <a href="https://www.twitter.com/astro_vik">@astro_vik</a>
+                        contact me: <a href="mailto:vik@arizona.edu">vik@arizona.edu</a>, <a href="https://bsky.app/profile/vikmani.bsky.social">@vikmani.bsky.social</a>
                     </p>
                 </div>
 
@@ -130,7 +130,7 @@
                 </div>
                 <div class="square">
                     <h3><a href="https://twitter.com/StewardAstro">Steward Social Media</a></h3>
-                    <p><mark>Graduate Student Lead</mark> for Steward Observatory's new social media initiative which includes creating and running our <a href="https://www.instagram.com/stewardobservatory">Instagram</a>, <a href="https://twitter.com/StewardAstro">Twitter</a>, and <a href="https://www.facebook.com/StewardAstronomy/">Facebook</a> accounts, as well as developing content to post three times a week.</p>
+                    <p><mark>Graduate Student Lead</mark> for Steward Observatory's new social media initiative which includes creating and running our <a href="https://www.instagram.com/stewardobservatory">Instagram</a>, <a href="https://twitter.com/StewardAstro">Twitter</a>, <a href="https://bsky.app/profile/stewardobservatory.bsky.social">Bluesky</a> and <a href="https://www.facebook.com/StewardAstronomy/">Facebook</a> accounts, as well as developing content to post three times a week.</p>
                 </div>
                 <div class="square">
                     <h3><a href="https://timestep.arizona.edu/programs/timestep-summer-tech-internship" target="_blank">TIMESTEP Internship</a></h3>
@@ -183,7 +183,7 @@
                     <p>
                         Email: <a href="mailto:vik@arizona.edu">vik@arizona.edu</a><sup> &nearr;</sup>
                         <br>
-                        Twitter: <a href="https://www.twitter.com/astro_vik">@astro_vik</a><sup> &nearr;</sup>
+                        Bluesky: <a href="https://bsky.app/profile/vikmani.bsky.social">@vikmani.bsky.social</a>
                         <br>
                         Github: <a href="https://github.com/vikrammanikantan">vikrammanikantan</a><sup> &nearr;</sup>
                         <br>
