added new paper

--- a/index.html
+++ b/index.html
@@ -95,9 +95,12 @@
                     <p>
                         <a href="https://scholar.google.com/citations?user=cscvnHUAAAAJ&hl=en">google scholar</a>,<sup>&nearr;</sup> <a href="https://ui.adsabs.harvard.edu/search/q=author%3A%22Manikantan%2C%20Vikram%22">ADS</a><sup>&nearr;</sup>
                     </p>
-                    <ol reversed>
-                        <li> 
-                            "Winds and Disk Turbulence Exert Equal Torques on Magnetically Arrested Disks"<mark> Vikram Manikantan</mark>, <a href="https://ciera.northwestern.edu/directory/nicholas-omahen/">Nick Kaaz</a>, <a href="https://ciera.northwestern.edu/directory/jonatan-jacquemin-ide/">Jonatan Jacquemin-Ide</a>, et al. 2024, ApJ, 965 175. doi: <a href="http://doi.org/10.3847/1538-4357/ad323d">10.3847/1538-4357/ad323d</a>.
+                    <ol reversed style="line-height: 130%;">
+                        <li>
+                            "Coincident Multimessenger Bursts from Eccentric Supermassive Binary Black Holes" <mark> Vikram Manikantan</mark>, <a href="https://astro.arizona.edu/person/vasileios-vasilis-paschalidis">Vasileios Paschalidis</a>, and <a href="https://sbozzolo.github.io/">Gabriele Bozzola</a>, 2024. Submitted. arXiv preprint <a href="https://arxiv.org/abs/2411.11955">arXiv:2411.11955</a>.
+                        </li>
+                        <li style="margin-top: 20px;"> 
+                            "Winds and Disk Turbulence Exert Equal Torques on Magnetically Arrested Disks" <mark>Vikram Manikantan</mark>, <a href="https://ciera.northwestern.edu/directory/nicholas-omahen/">Nick Kaaz</a>, <a href="https://ciera.northwestern.edu/directory/jonatan-jacquemin-ide/">Jonatan Jacquemin-Ide</a>, et al. 2024, ApJ, 965 175. doi: <a href="http://doi.org/10.3847/1538-4357/ad323d">10.3847/1538-4357/ad323d</a>.
                         </li>
                     </ol>
                     
