added latest paper

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
                     </p>
                     <ol reversed style="line-height: 130%;">
                         <li>
+                            "Effects of Eccentricity on Accreting Binary Black Holes: MHD Simulations in Full GR Reveal Novel Periodicities in Jet Power and Synchrotron Spectra" <mark> Vikram Manikantan</mark>, <a href="https://astro.arizona.edu/person/vasileios-vasilis-paschalidis">Vasileios Paschalidis</a>, and <a href="https://sbozzolo.github.io/">Gabriele Bozzola</a>, 2025. Submitted. arXiv preprint <a href="https://arxiv.org/abs/2504.12375">arXiv:2504.12375</a>.
+                        </li>
+                        <li>
                             "Coincident Multimessenger Bursts from Eccentric Supermassive Binary Black Holes" <mark> Vikram Manikantan</mark>, <a href="https://astro.arizona.edu/person/vasileios-vasilis-paschalidis">Vasileios Paschalidis</a>, and <a href="https://sbozzolo.github.io/">Gabriele Bozzola</a>, 2024. Submitted. arXiv preprint <a href="https://arxiv.org/abs/2411.11955">arXiv:2411.11955</a>.
                         </li>
                         <li style="margin-top: 20px;"> 
