--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
                 <h1>Research </h1>
                 <div class="content">
                     <p>
-                        I am a theoretical and computational astrophysicist whose research focuses on the multi-messenger nature of compact objects such as supermassive black hole binaries, neutron stars, supernovae, and other high-energy transients. I use numerical relativity and magnetohydrodynamic codes, such as Einstein Toolkit, IllinoisGRMHD, and H-AMR, to simulate these systems from first principles. 
+                        I am a theoretical and computational astrophysicist whose research focuses on the multi-messenger nature of compact objects such as supermassive (binary) black holes. I use numerical relativity and magnetohydrodynamic codes, such as Einstein Toolkit, IllinoisGRMHD, and H-AMR, to simulate these systems from first principles. 
                     </p>
                     <p>
-                        Currently, I am studying magnetohydrodynamic accretion onto supermassive binary black holes, with a specific interest in uncovering the electromagnetic counterparts to gravitational wave signals from these systems. We simulate these systems from first principles by fully solving Einstein's equations of general relativity to accurately model the spacetime and then evolving the magnetohydrodynamic equations on the curved spacetime to simulate the accretion flow. 
+                        Currently, I am studying accretion onto supermassive binary black holes, with a specific interest in uncovering the electromagnetic counterparts to gravitational wave signals from these systems. We simulate these systems by solving Einstein's equations of general relativity to accurately model the spacetime, and then evolving the magnetohydrodynamic equations on the curved spacetime to simulate the accretion flow. 
                     </p>
                 </div>
                 <div class="image">
@@ -118,7 +118,7 @@
                         I am passionate about developing programs that increase undergraduate students success in astrophysics research. I currently focus on two aspects of this: 1. training students with <mark style="background-color: var(--highlight-dark);">fundamental skills</mark> needed to perform leading research, and 2. providing mentorship and a support structure to create <mark style="background-color: var(--highlight-dark);">sustainable success</mark> and increase retention of underrepresented groups.
                     </p>
                     <p>
-                        To do this, I have taken a leading role in developing several programs at the University of Arizona, including the <a href="https://timestep.arizona.edu/programs/timestep-research-apprenticeship" target="_blank">TIMESTEP Research Apprenticeship</a> program and the <a href="">Computational and Mathematical Program for incoming Arizona Science Students</a> (COMPASS). I am also interested in, and attended a workshop on, developing <a href="https://ur.arizona.edu/content/course-based-research-undergraduate-experiences-cures"> Course-based Undergraduate Research Experiences</a> (CUREs) to increase undergraduate research opportunities. 
+                        To do this, I have taken leadership roles in several programs at the University of Arizona, including the <a href="https://timestep.arizona.edu/programs/timestep-research-apprenticeship" target="_blank">TIMESTEP Research Apprenticeship</a> program and the <a href="">Computational and Mathematical Program for incoming Arizona Science Students</a> (COMPASS). I am also interested in, and attended a workshop on, developing <a href="https://ur.arizona.edu/content/course-based-research-undergraduate-experiences-cures"> Course-based Undergraduate Research Experiences</a> (CUREs) to increase undergraduate research opportunities. 
                     </p>
 
                     <p>
